[package]
name = "nvim_chaos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
enum_dispatch = "0.3.13"
nvim-oxi = { version = "0.5.1", features = [ "neovim-0-10", "test", "libuv", ]}
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_path_to_error = "0.1.16"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0.61"
tokio = "1.38.0"
twitch-irc = "5.0.1"

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
