[package]
name = "nvim_chaos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
enum_dispatch = "0.3.13"
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi", rev="dc13af07e2b200d23a98f2a8401d2bed6b5524f3", features = [ "neovim-nightly", "test", "libuv", ]}
serde = { version = "1.0.203", features = ["derive"] }
serde_path_to_error = "0.1.16"
thiserror = "1.0.61"
tokio = "1.38.0"
twitch-irc = "5.0.1"
rodio = { version = "0.20.1", features = ["symphonia-all"]}

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
